--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     volumes:
       - /home/ubuntu/compose/certbot/conf:/etc/letsencrypt
       - /home/ubuntu/compose/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   controller:
     image: ngrinder/controller:3.5.9
